--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "homepage": "http://jsutinz.github.io/website-v1",
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
@@ -23,6 +24,5 @@
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
-  }, 
-  "homepage": "http://jsutinz.github.io/justinzhang.github.io"
+  } 
 }
