--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -14,7 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "homepage": "http://jsutinz.github.io/website-v1",
+  "homepage": "http://jsutinz.github.io/",
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
@@ -24,5 +24,5 @@
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
-  } 
+  }
 }
