--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
+  "homepage": "http://jsutinz.github.io/justin-zhang",
   "name": "website-v1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -14,7 +15,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "homepage": "http://jsutinz.github.io/",
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
