--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jsutinz.github.io/justin-zhang",
+  "homepage": "http://jsutinz.github.io/",
   "name": "website-v1",
   "private": true,
   "version": "0.0.0",
